# SmallDesktopDisplay

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  NOTE.md  README.md  README.zh-CN.md  platformio.ini
docs/: recent-iterations.md  remote-rendering-http-frame-design.md  roadmap.md
include/: TFT_eSPI_SDD_ST7789.h
remote-render/: Dockerfile  docker-compose.yml  pyproject.toml
remote-render/app/: __init__.py  main.py  protocol.py  renderer.py  state.py  ui_state.py
remote-render/tests/: test_api.py  test_frame_preview.py  test_protocol.py  test_renderer.py  test_ui_state.py
remote-render/tools/: __init__.py  frame_preview.py
src/: AppConfig.h  AppState.h  Cli.cpp  Cli.h  Dht11.cpp  Dht11.h  Display.cpp  Display.h  Input.cpp  Input.h  Net.cpp  Net.h  Ntp.cpp  Ntp.h  Screen.cpp  Screen.h  Storage.cpp  Storage.h  Weather.cpp  Weather.h  main.cpp
src/Animate/: Animate.cpp  Animate.h
src/adapters/: Dht11SensorPort.cpp  Dht11SensorPort.h  EepromStoragePort.cpp  EepromStoragePort.h  Esp8266NetworkPort.cpp  Esp8266NetworkPort.h  Esp8266SystemStatusPort.cpp  Esp8266SystemStatusPort.h  NtpTimeSyncPort.cpp  NtpTimeSyncPort.h  WeatherServicePort.cpp  WeatherServicePort.h
src/app/: AppAction.h  AppConfigData.h  AppCore.cpp  AppCore.h  AppDataCache.h  AppDriver.cpp  AppDriver.h  AppEvent.h  AppRuntimeState.h  AppViewModel.h  BackgroundRefreshPolicy.h  BacklightPwm.cpp  BacklightPwm.h  DeviceStatusText.cpp  DeviceStatusText.h  DiagnosticsSnapshot.h  FrameDiagnostics.cpp  FrameDiagnostics.h  HoldInteraction.cpp  HoldInteraction.h  HoldProgress.cpp  HoldProgress.h  (+15 more)
(+69 files in other folders)
